PyMaker/datas/object2/RawHTML/i701/Python_DOC_referPages.activating-virtualenv-from-within-python-script.txt
<div class="post-text" itemprop="text">
<p>I am trying to activate my virtualenv (already existing) using the following python code:</p>
<p><strong>Test.py</strong></p>
<pre><code>import os, sys
filename = "activate"
exec(compile(open(filename, "rb").read(), filename, 'exec'), globals, locals)
print(os.system('pwd'))

if hasattr(sys, 'real_prefix'):
    print('success')
else:
    print('failed')
</code></pre>
<p>I then run this script via the terminal:</p>
<p><code>python Test.py</code></p>
<p>which then produces this error:</p>
<p><code>Traceback (most recent call last):
  File "activate_this.py", line 3, in &lt;module&gt;
    exec(compile(open(filename, "rb").read(), filename, 'exec'), globals, locals)
  File "activate", line 4
    deactivate () {
                  ^
SyntaxError: invalid syntax
</code></p>
<hr/>
<p>I can activate the virtualenv successfully by executing <code>cd env/bin</code> and then <code>source activate</code></p>
<hr/>
<p>TLDR</p>
<p>Activating virtualenv from python script is throwing a syntax error from within the activate file.  </p>
</div>
<div class="post-text" itemprop="text">
<p>The very 1<sup>st</sup> line of <em>activate</em> (note that <em>VEnv</em> is installed on <em>Win</em>, but this shouldn't be a problem):</p>
<pre class="lang-sh prettyprint-override"><code># This file must be used with "source bin/activate" *from bash* 
</code></pre>
<p>That, and the lines below should tell you that <em>activate</em> is a (<em>Bourne</em>) <strong><em>shell</em></strong> file.</p>
<p><a href="https://docs.python.org/3/library/functions.html#compile" rel="nofollow noreferrer">[Python 3]: <strong>compile</strong>(<em>source, filename, mode, flags=0, dont_inherit=False, optimize=-1</em>)</a> on the other hand, works with <strong><em>Python</em></strong> source code.</p>
<p>So, in order to execute the file, you'd need to use other ways, e.g. <a href="https://docs.python.org/3/library/subprocess.html" rel="nofollow noreferrer">[Python 3]: subprocess - Subprocess management</a>. <br/>You can check how I've used it: <a href="https://stackoverflow.com/questions/54237800/how-to-effectively-convert-a-posix-path-to-windows-path-with-python-in-cygwin/54240102#54240102">[SO]: How to effectively convert a POSIX path to Windows path with Python in Cygwin? (@CristiFati's answer)</a>.</p>
<p>But, <strong>I really don't see the point of doing all this</strong>, you probably misunderstood your colleague's suggestion. <br/>
Also note that even if you do manage to do it this way, all <strong>the environment variables will only be set in the calling process</strong>, so it will pretty much be unusable (well, unless you also execute your script from there too).</p>
<p>You should go the recommended way (<a href="https://virtualenv.pypa.io/en/stable/userguide/#user-guide" rel="nofollow noreferrer">[PyPA]: Virtualenv - User Guide</a>), and that is (from <strong><em>bash</em></strong>):</p>
<pre class="lang-sh prettyprint-override"><code>source /path/to/Django/ENV/bin/activate
python your_project_startup_script.py  # (as I recall, it's manage.py)
</code></pre>
</div>
<span class="comment-copy">why not do this properly and activate it from a shell script and then run your python in there? not to mention <code>activate</code> is a <code>sh</code> script so not sure how you plan to execute it with python</span>
<span class="comment-copy">^^ somehow I highly doubt that, in all my work experience I have never seen it done once this way, typically you make a <code>sh</code> script that activates your env and then runs your python program</span>
<span class="comment-copy">You cannot <code>compile()</code> a shell script...</span>
<span class="comment-copy">why are you trying to use compile on a bash script (activate)? apart of that, activate changes env variables of the current env to set the requested python executable and paths - running this from (another?) python executable (<a href="https://docs.python.org/2/library/os.html#os.environ" rel="nofollow noreferrer">even if it works</a>) seems completely nonsensical - why would you do that?</span>
<span class="comment-copy">Possible duplicate of <a href="https://stackoverflow.com/questions/6943208/activate-a-virtualenv-with-a-python-script">Activate a virtualenv with a python script</a></span>
<span class="comment-copy">I'll do it all via the bash script as that is the most logical way</span>
<span class="comment-copy">Yes, no reason not to go with the recommended way, unless some restriction is being imposed.</span>
